--- a/client/src/assets/styles/index.css
+++ b/client/src/assets/styles/index.css
@@ -9,5 +9,17 @@
 }
 
 body {
-  background: red;
-}/*# sourceMappingURL=index.css.map */
+  background: var(--neutral-light);
+  margin: 0;
+}
+
+#MainWrapper {
+  width: 100%;
+}
+
+#MainWrapperInner {
+  width: 100%;
+  max-width: 1440px;
+}
+
+/*# sourceMappingURL=index.css.map */
