--- a/client/src/assets/styles/index.css
+++ b/client/src/assets/styles/index.css
@@ -16,10 +16,7 @@ body {
 #MainWrapper {
   width: 100%;
 }
-
 #MainWrapperInner {
   width: 100%;
   max-width: 1440px;
-}
-
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
