--- a/client/src/router/Home.css
+++ b/client/src/router/Home.css
@@ -1,1 +1,19 @@
-/*# sourceMappingURL=Home.css.map */
+.topic-wrapper {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.topic-wrapper p {
+  color: white;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-shadow: 0 0 2px black;
+}
+.topic.linux {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(145deg, #1A0D6F 0%, #9C1121 100%);
+}/*# sourceMappingURL=Home.css.map */
